--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="navigation_bottom_info">Info</string>
     <string name="navigation_bottom_rates">Rates</string>
     <string name="navigation_bottom_chat">Chat</string>
+    <string name="chat_edit_text_message_hint">Type here a message...</string>
 
 </resources>
