--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="navigation_bottom_info">Info</string>
     <string name="navigation_bottom_rates">Rates</string>
     <string name="navigation_bottom_chat">Chat</string>
-    <string name="chat_edit_text_message_hint">Type here a message...</string>
+    <string name="chat_edit_text_message_hint">Type here a message…</string>
+
+    <string name="info_label_messages">Total messages</string>
+    <string name="info_no_name">Name is not available</string>
 
 </resources>
